Creating and adding database migrations

--- a/Academy.Web/appsettings.json
+++ b/Academy.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Academy.Web-5792C8F8-6EA3-4C04-A706-BCFD8B0600F2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Initial Catalog=IcaAcademyDb;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
